[package]
name = "rust_ruuvi_db"
version = "0.1.0"
authors = ["Paippi <samuli.piippo@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "decimal"]}
tokio = { version = "1", features = ["full"]}
tokio-stream = { version = "0.1.12" }
ruuviscanner = { git = "https://github.com/Paippi/ruuviscanner.git" }
rust_decimal = "1.29.1"

[lib]
name = "ruuvi_db" 
